Added email code.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,6 +3,7 @@
     <app-button
         [color]="'green'"
         [text]="'Click'"
+        (btnClick)="main()"
     >
     </app-button>
 </header>
