--- a/src/app/components/email-item/email-item.component.html
+++ b/src/app/components/email-item/email-item.component.html
@@ -1,1 +1,30 @@
-<p>email-item works!</p>
+<form class="add-form">
+    <div class="form-control">
+      <label for="text">Recipient(s)</label>
+      <input
+        type="text"
+        name="recipient"
+        id="text"
+        placeholder="Add Recipient(s)"
+      />
+    </div>
+    <div class="form-control">
+      <label for="subject">Subject</label>
+      <input
+        type="text"
+        name="subject"
+        id="day"
+        placeholder="Specify Subject"
+      />
+    </div>
+    <div class="form-control">
+        <label for="message">Message</label>
+        <input
+          type="text"
+          name="message"
+          id="message"
+          placeholder="Write Message"
+        />
+      </div>
+    <input type="submit" value="Send" class="btn btn-block" />
+</form>
