--- a/src/app/components/email-item/email-item.component.html
+++ b/src/app/components/email-item/email-item.component.html
@@ -1,24 +1,22 @@
 <form class="add-form" [formGroup]="infoForm" (ngSubmit)="sendMail()" #form="ngForm">
-    <div class="form-control">
-      <label for="text">Recipient</label>
-      <input
-        formControlName="emailAddress"
-        type="text"
-        name="recipient"
-        id="text"
-        placeholder="Add Recipient"
-        required
-      />
-      <div *ngIf="emailAddress.invalid && (emailAddress.dirty || emailAddress.touched)"
-        class="alert alert-danger p-1">
-
-        <p *ngIf="emailAddress.errors?.['required']" class="mb-0">
-            Email is required.
-        </p>
-        <p *ngIf="emailAddress.errors?.['minlength']" class="mb-0">
-          Email must be at least 3 characters long.
-        </p>
-      </div>
+  <div class="form-control">
+    <label for="text">Recipient</label>
+    <input
+      formControlName="emailAddress"
+      type="text"
+      name="recipient"
+      id="text"
+      placeholder="Add Recipient"
+      required
+    />
+    <div *ngIf="emailAddress.invalid && (emailAddress.dirty || emailAddress.touched)" class="alert alert-danger p-1">
+      <p *ngIf="emailAddress.errors?.['required']" class="mb-0">
+        Email is required.
+      </p>
+      <p *ngIf="emailAddress.errors?.['minlength']" class="mb-0">
+        Email must be at least 3 characters long.
+      </p>
+    </div>
     <!-- <div class="form-control">
       <label for="subject">Subject</label>
       <input
@@ -27,25 +25,24 @@
         id="subject"
         placeholder="Specify Subject"
       /> -->
+  </div>
+  <div class="form-control">
+    <label for="message">Message</label>
+    <input
+      type="text"
+      name="message"
+      id="message"
+      placeholder="Write Message"
+      formControlName="email"
+    />
+    <div *ngIf="emailMessage.invalid && (emailMessage.dirty || emailMessage.touched)" class="alert alert-danger p-1">
+      <p *ngIf="emailMessage.errors?.['required']" class="mb-0">
+        Email message is required.
+      </p>
+      <p *ngIf="emailMessage.errors?.['email']" class="mb-0">
+        Email is incorrect.
+      </p>
     </div>
-    <div class="form-control">
-        <label for="message">Message</label>
-        <input
-          type="text"
-          name="message"
-          id="message"
-          placeholder="Write Message"
-          formControlName="email"
-        />
-        <div *ngIf="emailMessage.invalid && (emailMessage.dirty || emailMessage.touched)"
-             class="alert alert-danger p-1">
-             <p *ngIf="emailMessage.errors?.['required']" class="mb-0">
-              Email is required.
-            </p>
-            <p *ngIf="emailMessage.errors?.['email']" class="mb-0">
-              Email is incorrect.
-            </p>
-          </div>
-    </div>
-    <input type="submit" value="Send" class="btn btn-block" />
+  </div>
+  <input type="submit" value="Send" class="btn btn-block" />
 </form>
