--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
   <app-header></app-header>
-  <app-email-item></app-email-item>
+  <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
