Added stylingto form container

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>Angular Email App</h2>
-    <h4>Version: 1.0.0</h4>
+    <h2>Angular Emailer App</h2>
+    <h4>Created By Kyle Davis</h4>
     <a routerLink="/">Go Back</a>
 </div>
