--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
     <h1>{{ title }}</h1>
-    <app-button 
+    <!-- <app-button 
         color="{{ showAddTask ? 'red' : 'green' }}"
         text="{{ showAddTask ? 'Close' : 'Add' }}"
         >
-    </app-button>
+    </app-button> -->
 </header>
