--- a/src/app/components/email-item/email-item.component.html
+++ b/src/app/components/email-item/email-item.component.html
@@ -57,5 +57,5 @@
       </p> -->
     </div>
   </div>
-  <input type="submit" value="Send" class="btn btn-block" />
+  <input type="submit" value="Send" class="btn btn-block" [disabled]="form.invalid" />
 </form>
