--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -3,7 +3,5 @@ header {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
-    margin-left: 18px;
+    /* margin-left: 24px; */
 }
-
-
