--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@ body {
   margin: 30px auto;
   overflow: auto;
   min-height: 350px;
-  border: 3px solid steelblue;
+  border: 3px solid black;
   padding: 30px;
   border-radius: 5px;
   /* margin-top: 100px; */
