--- a/src/styles.css
+++ b/src/styles.css
@@ -6,13 +6,19 @@
   padding: 0;
 }
 
+html {
+  height:100%;
+}
+
 body {
   font-family: "Poppins", sans-serif;
+  margin:0;
 }
 
 .container {
   max-width: 500px;
-  width: 500px;
+  /* width: 600px; */
+  width: 800px;
   margin: 30px auto;
   overflow: auto;
   min-height: 350px;
@@ -33,6 +39,9 @@ body {
   transform: translate(-50%, -55%);
 }
 
+input {
+  border: 1px solid black;
+}
 
 .btn {
   display: inline-block;
@@ -47,9 +56,11 @@ body {
   font-size: 15px;
   font-family: inherit;
 }
+
 .btn:focus {
   outline: none;
 }
+
 .btn:active {
   transform: scale(0.98);
 }
@@ -88,14 +99,6 @@ body {
 .form-control-check input {
   flex: 2;
   height: 20px;
-}
-
-html {
-  height:100%;
-}
-
-body {
-  margin:0;
 }
 
 .bg {
@@ -139,4 +142,71 @@ body {
   100% {
     transform:translateX(25%);
   }
+}
+
+.rainbow {
+  
+  /* Font options */
+  font-family: 'Pacifico', cursive;
+  text-shadow: 2px 2px 4px grey;
+  /* margin-bottom: 52.7px; */
+  
+  /* seperate this into own class */
+  /* font-size: 40px; */
+  /* seperate this into own class */
+  text-align: center;
+
+  /* Chrome, Safari, Opera */
+  -webkit-animation: rainbow 5s infinite; 
+
+  /* Internet Explorer */
+  -ms-animation: rainbow 5s infinite;
+
+  /* Standard Syntax */
+  animation: rainbow 5s infinite; 
+}
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes rainbow {
+  0%{color: orange;}	
+  10%{color: purple;}	
+  20%{color: red;}
+  30%{color: CadetBlue;}
+  40%{color: yellow;}
+  50%{color: coral;}
+  60%{color: green;}
+  70%{color: cyan;}
+  80%{color: DeepPink;}
+  90%{color: DodgerBlue;}
+  100%{color: orange;}
+}
+
+/* Internet Explorer */
+@-ms-keyframes rainbow {
+  0%{color: orange;}	
+  10%{color: purple;}	
+  20%{color: red;}
+  30%{color: CadetBlue;}
+  40%{color: yellow;}
+  50%{color: coral;}
+  60%{color: green;}
+  70%{color: cyan;}
+  80%{color: DeepPink;}
+  90%{color: DodgerBlue;}
+  100%{color: orange;}
+}
+
+/* Standard Syntax */
+@keyframes rainbow {
+  0%{color: orange;}	
+  10%{color: purple;}	
+  20%{color: red;}
+  30%{color: CadetBlue;}
+  40%{color: yellow;}
+  50%{color: coral;}
+  60%{color: green;}
+  70%{color: cyan;}
+  80%{color: DeepPink;}
+  90%{color: DodgerBlue;}
+  100%{color: orange;}
 }
