About ui service dispay link update.

--- a/src/app/components/email-item/email-item.component.html
+++ b/src/app/components/email-item/email-item.component.html
@@ -52,8 +52,8 @@
       <p *ngIf="emailMessage.errors?.['required']" class="mb-0">
         Email message is required.
       </p>
-      <!-- <p *ngIf="emailMessage.errors?.['email']" class="mb-0">
-        Email is incorrect.
+       <!-- <p *ngIf="emailAddress.errors?.['minlength']" class="mb-0">
+        Email must be at least 3 characters long.
       </p> -->
     </div>
   </div>
