--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,5 +1,6 @@
 <div>
-    <h2>Angular Emailer App</h2>
-    <h4>Created By Kyle Davis</h4>
+    <h2 class="rainbow">Angular Emailer App</h2>
+    <h4 class="rainbow">Created By Kyle Davis</h4>
+    <br>
     <a routerLink="/">Go Back</a>
 </div>
