--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,5 @@
 <footer>
-    <p>Copyright &copy; 2022</p>
-    <a routerLink="/about">About</a>
+    <p class="rainbow">Copyright &copy; 2022</p>
+    <br>
+    <a *ngIf="hasRoute('/')" routerLink="/about">About</a>
 </footer>
