--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>{{ title }}</h1>
+    <h1 class="rainbow">{{ title }}</h1>
     <app-button
         *ngIf="hasRoute('/')" 
         color="{{ showAddTask ? 'red' : 'green' }}"
