--- a/src/app/components/email-item/email-item.component.html
+++ b/src/app/components/email-item/email-item.component.html
@@ -11,7 +11,7 @@
       required
     />
     <div *ngIf="emailAddress.invalid && (emailAddress.dirty || emailAddress.touched)" class="alert alert-danger p-1">
-      <p *ngIf="emailAddress.errors?.['required']" class="mb-0">
+      <p *ngIf="emailAddress.errors?.['required']" class="error">
         Email address is required.
       </p>
       <!-- <p *ngIf="emailAddress.errors?.['minlength']" class="mb-0">
@@ -30,7 +30,7 @@
       required
     />
     <div *ngIf="emailSubject.invalid && (emailSubject.dirty || emailSubject.touched)" class="alert alert-danger p-1">
-      <p *ngIf="emailSubject.errors?.['required']" class="mb-0">
+      <p *ngIf="emailSubject.errors?.['required']" class="error">
         Email message subject is required.
       </p>
       <!-- <p *ngIf="emailSubject.errors?.['email']" class="mb-0">
@@ -49,7 +49,7 @@
       required
     />
     <div *ngIf="emailMessage.invalid && (emailMessage.dirty || emailMessage.touched)" class="alert alert-danger p-1">
-      <p *ngIf="emailMessage.errors?.['required']" class="mb-0">
+      <p *ngIf="emailMessage.errors?.['required']" class="error">
         Email message is required.
       </p>
        <!-- <p *ngIf="emailAddress.errors?.['minlength']" class="mb-0">
