--- a/src/styles.css
+++ b/src/styles.css
@@ -115,11 +115,11 @@ input {
 
 .bg2 {
   animation-direction:alternate-reverse;
-  animation-duration:4s;
+  animation-duration: 4s;
 }
 
 .bg3 {
-  animation-duration:5s;
+  animation-duration: 5s;
 }
 
 .content {
@@ -209,4 +209,80 @@ input {
   80%{color: DeepPink;}
   90%{color: DodgerBlue;}
   100%{color: orange;}
+}
+
+
+/* Mobile View */
+@media screen and (max-width: 500px) {
+
+  body {
+    max-width: 100%;
+    box-sizing: border-box;
+  }
+
+  .container {
+    /* max-width: 500px; */
+    /* width: 600px; */
+    width: 50px;
+    max-width: 100%;
+    margin: 100px auto;
+    /* overflow: auto; */
+    min-height: 350px;
+    border: 3px solid black;
+    padding: 100px;
+    border-radius: 5px;
+    /* margin-top: 100px; */
+    background-color:rgba(255,255,255,.8);
+    /* border-radius:.25em; */
+    box-shadow:0 0 .25em rgba(0,0,0,.25);
+    box-sizing: border-box;
+    left:50%;
+    /* padding:10vmin; */
+    /* position: fixed; */
+    text-align: center;
+    top: 50%;
+    /* margin-bottom: 50%; */
+    transform: translate(-50%, -55%);
+  }
+
+  .rainbow {
+    font-size: 14px;
+}
+}
+
+/* Tablet View */
+@media screen and (max-width: 800px) {
+
+  body {
+    max-width: 100%;
+    box-sizing: border-box;
+  }
+
+  .container {
+    /* max-width: 700px; */
+    /* width: 600px; */
+    width: 600px;
+    margin: 30px auto;
+    overflow: auto;
+    min-height: 350px;
+    border: 3px solid black;
+    padding: 30px;
+    border-radius: 5px;
+    /* margin-top: 100px; */
+    background-color:rgba(255,255,255,.8);
+    /* border-radius:.25em; */
+    box-shadow:0 0 .25em rgba(0,0,0,.25);
+    box-sizing: border-box;
+    left:50%;
+    /* padding:10vmin; */
+    position: fixed;
+    text-align: center;
+    top: 50%;
+    /* margin-bottom: 50%; */
+    transform: translate(-50%, -55%);
+  }
+
+  .rainbow {
+    font-size: 40px;
+}
 }
